# Team_project_art

./: CMakeLists.txt  README.md
doc/: Konspekt.tex
include/: AreaOfInterestCutter.hpp  ArtificialIntelligence.hpp  ButtonsSnapshot.hpp  Card.hpp  CardOperators.hpp  DetectionSystem.hpp  GameControl.hpp  IGameControl.hpp  ImageAnalyzer.hpp  ImageTemplates.hpp  Position.hpp  PrintScreenMaker.hpp  SizeConverter.hpp  TableAnalyzer.hpp  TableObserver.hpp  TableSnapshot.hpp  TableSnapshotOperators.hpp  TableSubject.hpp
src/: AreaOfInterestCutter.cpp  ArtificialIntelligence.cpp  ArtificialIntelligence.cpp.S25288  ButtonsSnapshot.cpp  CMakeLists.txt  Card.cpp  DetectionSystem.cpp  GameControl.cpp  ImageAnalyzer.cpp  ImageTemplates.cpp  Position.cpp  PrintScreenMaker.cpp  SizeConverter.cpp  TableAnalyzer.cpp  TableSubject.cpp  main.cpp  testBinary.cpp
templates/: 10b.tiff  10c.tiff  10r.tiff  2b.tiff  2c.tiff  2r.tiff  3b.tiff  3c.tiff  3r.tiff  4b.tiff  4c.tiff  4r.tiff  5b.tiff  5c.tiff  5r.tiff  6b.tiff  6c.tiff  6r.tiff  7b.tiff  7c.tiff  7r.tiff  8b.tiff  8c.tiff  8r.tiff  9b.tiff  9r.tiff  Ab.tiff  Ac.tiff  Ar.tiff  Jb.tiff  Jc.tiff  Jr.tiff  Kb.tiff  Kc.tiff  Kr.tiff  LUcorner.tiff  Qb.tiff  Qc.tiff  Qr.tiff  RUcorner.tiff  (+41 more)
test/: ArtificialIntelligence.cpp  ArtificialIntelligenceTest.cpp  CMakeLists.txt  CardOperators.hpp  CardTest.cpp  DetectionSystemTest.cpp  GameControlMock.hpp  ImageAnalyzerTest.cpp  SnapshotMatcher.hpp  TableObserverMock.hpp  main.cpp
test/DetectionSystemImages/: tableSnapshot1366x768.tiff
